@@ -67,7 +67,7 @@
         }, 
         {
             "location": "/documentation/", 
-            "text": "Vignettes\n\n\n\n\nGOSemSim: An introduction to GOSemSim\n\n\nDOSE introduction\n\n\nDOSE semantic similarity analysis\n\n\nDisease enrichment analysis\n\n\nDisease GSEA\n\n\n\n\n Blog posts\n\n\n News and updates\n\n\n\n\nR package DOSE released\n\n\nDOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis\n\n\nBioC 3.1: NEWS of my BioC packages\n\n\nBioC 3.2: NEWS of my BioC packages\n\n\nBioC 3.3: NEWS of my BioC packages\n\n\nBioC 3.4: NEWS of my BioC packages\n\n\n\n\n Enrichment analysis\n\n\n\n\nNCG enrichment implemented in DOSE\n \n bioinfoblog.it\n\n\nfunctional enrichment for GTEx paper\n\n\nfunctional enrichment analysis with NGS data\n\n\nleading edge analysis\n\n\nwhy clusterProfiler fails\n\n\nComparison of clusterProfiler and GSEA-P\n\n\n\n\n Visualization\n\n\n\n\ndotplot for enrichment result\n\n\nenrichment map\n\n\n\n\n Find out more on \nhttps://guangchuangyu.github.io/tags/dose\n.", 
+            "text": "Vignettes\n\n\n\n\nGOSemSim: An introduction to GOSemSim\n\n\nDOSE introduction\n\n\nDOSE semantic similarity analysis\n\n\nDisease enrichment analysis\n\n\nDisease GSEA\n\n\n\n\n Blog posts\n\n\n News and updates\n\n\n\n\nR package DOSE released\n\n\nDOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis\n\n\nBioC 3.1: NEWS of my BioC packages\n\n\nBioC 3.2: NEWS of my BioC packages\n\n\nBioC 3.3: NEWS of my BioC packages\n\n\nBioC 3.4: NEWS of my BioC packages\n\n\n\n\n Enrichment analysis\n\n\n\n\nNCG enrichment implemented in DOSE\n \n bioinfoblog.it\n\n\nfunctional enrichment for GTEx paper\n\n\nfunctional enrichment analysis with NGS data\n\n\nleading edge analysis\n\n\nwhy clusterProfiler fails\n\n\nComparison of clusterProfiler and GSEA-P\n\n\n\n\n Visualization\n\n\n\n\ndotplot for enrichment result\n\n\nenrichment map\n\n\nshowCategory parameter for visualizing compareCluster output\n\n\n\n\n Find out more on \nhttps://guangchuangyu.github.io/tags/dose\n.", 
             "title": "Documentation"
         }, 
         {
@@ -92,12 +92,12 @@
         }, 
         {
             "location": "/documentation/#visualization", 
-            "text": "dotplot for enrichment result  enrichment map    Find out more on  https://guangchuangyu.github.io/tags/dose .", 
+            "text": "dotplot for enrichment result  enrichment map  showCategory parameter for visualizing compareCluster output    Find out more on  https://guangchuangyu.github.io/tags/dose .", 
             "title": " Visualization"
         }, 
         {
             "location": "/featuredArticles/", 
-            "text": "Let us know if you have published using \nDOSE\n and your publication will be featured here.\n\n\n\n\n\n\n\n\n\n\n\n\n\n  .rChart {\n    display: block;\n    margin-left: auto; \n    margin-right: auto;\n    width: 800px;\n    height: 300px;\n  }  \n  \n\n\n\n\n\n\n\n    var chartParams = {\n \"element\": \"chart6d53de9646\",\n\"width\":            800,\n\"height\":            400,\n\"xkey\": \"year\",\n\"ykeys\": [\n \"cites\" \n],\n\"data\": [\n {\n \"year\": 2015,\n\"cites\":              9,\n\"pubid\": \"Ug5p-4gJ2f0C\" \n},\n{\n \"year\": 2016,\n\"cites\":             10,\n\"pubid\": \"Ug5p-4gJ2f0C\" \n} \n],\n\"id\": \"chart6d53de9646\",\n\"labels\": \"cites\" \n},\n      chartType = \"Bar\"\n    new Morris[chartType](chartParams)\n\n\n\n\nFind out more on \n google scholar\n.\n\n\n 2016\n\n\nNCG 5.0: updates of a manually curated repository of cancer genes and associated properties from cancer mutational screenings\n. \nNucleic Acids Research\n. 2016, 44(D1):D992-D999.\n\n\nReactomePA: an R/Bioconductor package for reactome pathway analysis and visualization\n. \nMolecular BioSystems\n. 2016, 12(2):477-479.\n\n\n\n\n 2015\n\n\nThe estrous cycle surpasses sex differences in regulating the transcriptome in the rat medial prefrontal cortex and reveals an underlying role of early growth response 1\n. \nGenome Biology\n. 2015, 16:256.\n\n\nRelationships between predicted moonlighting proteins, human diseases, and comorbidities from a network perspective\n. \nFrontiers in Physiology\n. 2015, 6:171.\n\n\nChIPseeker: an R/Bioconductor package for ChIP peak annotation, comparision and visualization\n. \nBioinformatics\n. 2015, 31(14):2382-2383.\n\n\nDOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis\n. \nBioinformatics\n. 2015, 31(4):608-609.", 
+            "text": "Let us know if you have published using \nDOSE\n and your publication will be featured here.\n\n\n\n\n\n\n\n\n\n\n\n\n\n  .rChart {\n    display: block;\n    margin-left: auto; \n    margin-right: auto;\n    width: 800px;\n    height: 300px;\n  }  \n  \n\n\n\n\n\n\n\n    var chartParams = {\n \"element\": \"chart2ab922fdf05d\",\n\"width\":            800,\n\"height\":            400,\n\"xkey\": \"year\",\n\"ykeys\": [\n \"cites\" \n],\n\"data\": [\n {\n \"year\": 2015,\n\"cites\":              9,\n\"pubid\": \"Ug5p-4gJ2f0C\" \n},\n{\n \"year\": 2016,\n\"cites\":             10,\n\"pubid\": \"Ug5p-4gJ2f0C\" \n} \n],\n\"id\": \"chart2ab922fdf05d\",\n\"labels\": \"cites\" \n},\n      chartType = \"Bar\"\n    new Morris[chartType](chartParams)\n\n\n\n\nFind out more on \n google scholar\n.\n\n\n 2016\n\n\nNCG 5.0: updates of a manually curated repository of cancer genes and associated properties from cancer mutational screenings\n. \nNucleic Acids Research\n. 2016, 44(D1):D992-D999.\n\n\nReactomePA: an R/Bioconductor package for reactome pathway analysis and visualization\n. \nMolecular BioSystems\n. 2016, 12(2):477-479.\n\n\n\n\n 2015\n\n\nThe estrous cycle surpasses sex differences in regulating the transcriptome in the rat medial prefrontal cortex and reveals an underlying role of early growth response 1\n. \nGenome Biology\n. 2015, 16:256.\n\n\nRelationships between predicted moonlighting proteins, human diseases, and comorbidities from a network perspective\n. \nFrontiers in Physiology\n. 2015, 6:171.\n\n\nChIPseeker: an R/Bioconductor package for ChIP peak annotation, comparision and visualization\n. \nBioinformatics\n. 2015, 31(14):2382-2383.\n\n\nDOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis\n. \nBioinformatics\n. 2015, 31(4):608-609.", 
             "title": "Featured Articles"
         }, 
         {
