@@ -4,7 +4,7 @@
     
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
     
@@ -12,7 +12,7 @@
     
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/documentation/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
     
@@ -20,7 +20,7 @@
     
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/featuredArticles/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
     
@@ -29,49 +29,49 @@
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/ChIPseeker/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/clusterProfiler/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/DOSE/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/emojifont/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/ggtree/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/GOSemSim/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/meshes/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
     <url>
      <loc>https://guangchuangyu.github.io/DOSE/ReactomePA/</loc>
-     <lastmod>2016-10-20</lastmod>
+     <lastmod>2016-11-03</lastmod>
      <changefreq>daily</changefreq>
     </url>
         
