@@ -15,9 +15,9 @@
 
 <link rel="stylesheet" href="https://guangchuangyu.github.io/css/font-awesome.min.css">
 
-[![releaseVersion](https://img.shields.io/badge/release%20version-3.0.0-blue.svg?style=flat)](https://bioconductor.org/packages/DOSE)
-[![develVersion](https://img.shields.io/badge/devel%20version-3.1.0-blue.svg?style=flat)](https://github.com/GuangchuangYu/DOSE)
-[![total](https://img.shields.io/badge/downloads-47563/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/DOSE)
+[![releaseVersion](https://img.shields.io/badge/release%20version-3.0.1-blue.svg?style=flat)](https://bioconductor.org/packages/DOSE)
+[![develVersion](https://img.shields.io/badge/devel%20version-3.1.1-blue.svg?style=flat)](https://github.com/GuangchuangYu/DOSE)
+[![total](https://img.shields.io/badge/downloads-48275/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/DOSE)
 [![month](https://img.shields.io/badge/downloads-2034/month-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/DOSE)
 
 This package implements five methods proposed by _Resnik_, _Schlicker_, _Jiang_, _Lin_ and _Wang_ respectively for measuring semantic similarities among DO terms and gene products. Enrichment analyses including hypergeometric model and gene set enrichment analysis are also implemented for discovering disease associations of high-throughput biological data.
@@ -36,7 +36,7 @@ Please cite the following article when using `DOSE`:
 
 [![doi](https://img.shields.io/badge/doi-10.1093/bioinformatics/btu684-blue.svg?style=flat)](http://dx.doi.org/10.1093/bioinformatics/btu684)
 [![citation](https://img.shields.io/badge/cited%20by-19-blue.svg?style=flat)](https://scholar.google.com.hk/scholar?oi=bibs&hl=en&cites=16627502277303919270)
-[![Altmetric](https://img.shields.io/badge/Altmetric-27-blue.svg?style=flat)](https://www.altmetric.com/details/2788597)
+[![Altmetric](https://img.shields.io/badge/Altmetric-36-blue.svg?style=flat)](https://www.altmetric.com/details/2788597)
 
 __Yu G__, Wang L, Yan G and He QY<sup>*</sup>. DOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis. **Bioinformatics**, 2015, 31(4):608-609.
 
