@@ -1,5 +1,7 @@
 CHANGES IN VERSION 3.1.1
 ------------------------
+ o fixed parallel in Windows (not supported) <2016-10-24, Mon>
+   + https://github.com/GuangchuangYu/DOSE/issues/16
  o options(DOSE_workers = x) to set using x cores for GSEA analysis is removed. <2016-10-24, Mon>
    instead let MulticoreParam() to decide how many cores (can be set by `options(mc.cores = x)`).
 
